--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html class="no-js" lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Color Thief</title>
 
@@ -11,7 +10,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Karla%7CMontserrat:700">
-  <link rel="stylesheet" href="examples/css/screen.css">
+  <link rel="stylesheet" href="css/screen.css">
 
 </head>
 <body>
@@ -105,10 +104,10 @@
   </script>
 
 
-  <script src="src/color-thief.js"></script>
-  <script src="examples/js/jquery.js"></script>
-  <script src="examples/js/mustache.js"></script>
-  <script src="examples/js/demo.js"></script>
+  <script src="js/color-thief.min.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/mustache.min.js"></script>
+  <script src="js/demo.js"></script>
 
   <script type="text/javascript">
     var _gaq = _gaq || [];
